Mobile Overlap Fix

--- a/css/application.css
+++ b/css/application.css
@@ -220,7 +220,7 @@ p {
   position: relative;
   padding-bottom: 48px;
   /*margin-top: -113px;*/
-  margin-top: -97px; }
+  margin-top: -91px; }
   @media only screen and (min-width: 768px) {
     .hero-profile-text {
       margin-top: 0px;
