--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -25,7 +25,7 @@
   position: relative;
   padding-bottom: 48px;
   /*margin-top: -113px;*/
-  margin-top: -97px;
+  margin-top: -91px;
   @media #{$brk-tablet}{
   margin-top: 0px;
   padding-bottom: 0px;
